# WebRTCApp4Enterprise

./: .classpath  .project  .travis.yml  install.sh  install_cluster.sh  pom.xml
doc/: compile_webrtc.md
jni_source/: BUILD.gn
jni_source/java_wrapper/: adapt_bitrate.h  classreferenceholder.cc  custom_audio_device_module.cc  custom_audio_device_module.h  custom_video_capturer.cc  custom_video_capturer.h  file_audio_device.cc  file_audio_device.h  jni_helpers.cc  jni_helpers.h  jni_onload.cc  native_handle_impl.cc  native_handle_impl.h  peerconnection_jni.cc
jni_source/java_wrapper/codecs/: audio_encoder_factory.h  mock_h264_encoder.h  mock_opus_encoder.cc  mock_opus_encoder.h  video_encoder_factory.h
jni_source/java_wrapper/test/: h264_impl_unittest.cc
src/main/java/io/antmedia/enterprise/webrtcapp/: WebRTCApplication.java  WebRTCSampleApplication.java  WebSocketConfig.java  WebSocketListener.java  WebSocketLocalHandler.java
src/main/java/io/antmedia/enterprise/webrtcapp/session/: BroadcastSessionRestService.java  PreferenceSessionStore.java
src/main/java/io/antmedia/webrtc/: ConnectionContext.java  PreferenceSessionStore.java  WebRTCApplication.java  WebSocketListener.java
src/main/java/io/antmedia/webrtc/receiver/: FFmpegFrameRecorder.java  Frame.java  FrameRecorder.java  ReceiverConnectionContext.java
src/main/java/io/antmedia/webrtc/rest/: BroadcastSessionRestService.java
src/main/webapp/: audio_player.html  conference.html  extension.html  index.html  index_social_share.html  peer.html  play.html  play_embed.html  player.html
src/main/webapp/WEB-INF/: red5-web.properties  red5-web.xml  web.xml
src/main/webapp/js/: webrtc_adaptor.js  websocket_webrtc.js
src/test/java/io/antmedia/webrtc/test/: WebSocketListenerUnitTest.java
